Fix spacing around navigation brand

--- a/app/assets/stylesheets/components/navigation.css.scss
+++ b/app/assets/stylesheets/components/navigation.css.scss
@@ -1,4 +1,5 @@
 @import "addons/position";
+@import "globals/variables";
 
 .navbar {
   i {
@@ -18,6 +19,8 @@
 }
 
   .navbar-brand {
+    margin-right: $suh;
+
     i {
       @include position(relative, -4px 0 0 0);
     }
